added the parentaccountId

--- a/force-app/main/default/classes/OpportunitySumHandler.cls
+++ b/force-app/main/default/classes/OpportunitySumHandler.cls
@@ -3,6 +3,7 @@ public class OpportunitySumHandler {
     
     {
       Set<Id> setOfAccIds = new Set<Id>();
+      Set<Id>  setOfParentId = new Set<Id>();
        for(Opportunity oppObj:newValue)
        {
            if(oppObj.Amount!=Null)
